# mcp-servers

src/bash/: README.md  pyproject.toml
src/bash/src/mcp_server_bash/: __init__.py  server.py
src/python/: README.md  pyproject.toml
src/python/src/mcp_server_python/: __init__.py  __main__.py  server.py
src/ssh/: README.md  pyproject.toml
src/ssh/src/mcp_server_ssh/: server.py
