[project]
name = "mcp-server-python"
version = "0.1.0"
description = "MCP Server for executing Python code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.1",
    "aiofiles>=23.2.1",
    "psutil>=5.9.0",
    "dbus-python>=1.3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=8.3.3", "ruff>=0.8.0"]

[project.scripts]
mcp-server-python = "mcp_server_python:serve"